--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -33,7 +33,7 @@
                         <img src="https://via.placeholder.com/50" class="align-self-start mr-3 img-thumbnail" alt="...">
                         <div class="media-body">
                             <h5 class="mt-0">{{ annonces[0].dealerName }}</h5>
-                            <h6></h6>
+                            <h6 class="text-primary font-weight-medium">{{ annonces|length }} annonces en ligne</h6>
                         </div>
                     </div>
                 </div>
@@ -68,10 +68,10 @@
                             <div class="form-group">
                                 {{ form_label(form.make, "Recherche par marque") }}
                                 {{ form_errors(form.model) }}
-                                {{ form_widget(form.make, {'attr': {'class': 'selectpicker ', 'id': 'make-filter', 'data-live-search': true}}) }}
+                                {{ form_widget(form.make, {'attr': {'class': 'selectpicker ', 'id': 'make-filter', 'data-live-search': true, 'title': "Marque"}}) }}
                             </div>
                             <div class="form-group">
-                                {{ form_label(form.model, "Recherche par marque") }}
+                                {{ form_label(form.model, "Recherche par modèle") }}
                                 {{ form_errors(form.model) }}
                                 {{ form_widget(form.model, {'attr': {'id':'model-select'}}) }}
                             </div>
@@ -153,7 +153,7 @@
                                                 </div>
                                             </div>
                                             <p class="list-annonce-meta mb-auto d-flex justify-content-between"><span>
-											<i class="fas fa-road mr-2"></i>{{ annonce.mileage['value'] | number_format(0,'.',' ') }} km</span><span><i
+											<i class="fas fa-road mr-2"></i>{{ annonce.mileage | number_format(0,'.',' ') }} km</span><span><i
                                                             class="fas fa-cogs mr-2"></i>{{ annonce.transmission|capitalize }}</span><span
                                                         class="d-none d-sm-block"><i
                                                             class="fas fa-gas-pump mr-2"></i>{{ annonce.fuelType|capitalize }}</span><span
