--- a/templates/front/dealer.twig
+++ b/templates/front/dealer.twig
@@ -30,12 +30,25 @@
             <div class="row">
                 <div class="col">
                     <div class="media">
-                        <img src="https://via.placeholder.com/50" class="align-self-start mr-3 img-thumbnail" alt="...">
+                        <img src="https://www.vroomiz.fr/bundles/vrzfront/front/img/logo.png" width="75rem" class="align-self-start mr-3 img-thumbnail" alt="...">
                         <div class="media-body">
-                            <h5 class="mt-0">{{ dealer.dealerName }}</h5>
-                            <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en ligne</h6>
+                            <div class="d-flex justify-content-between">
+                                <div>
+                                    <h5 class="mt-0">{{ dealer.dealerName }}</h5>
+                                    <h6 class="text-primary font-weight-medium">{{ dealer.annonces|length }} annonces en ligne</h6>
+                                </div>
+                                <div>
+                                    <a href="#" class="btn btn-secondary">
+                                        Contacter l'annonceur
+                                    </a>
+                                </div>
+                            </div>
+
                         </div>
                     </div>
+                    <hr>
+                    <a class="list-annonce-place" href="#"><i class="fas fa-map-marker-alt mr-2 text-main" aria-hidden="true"></i>Coignières
+                    </a>
 
                     {% for message in app.flashes('success') %}
                         <div class="alert alert-success mt-2">
@@ -47,7 +60,7 @@
         </div>
     </div>
     <div class="d-flex d-lg-none mt-3 p-3">
-        <button class="btn btn-outline-primary btn-round" id="showFilter">
+        <button class="btn btn-outline-dark btn-round" id="showFilter">
             Filtre
         </button>
     </div>
@@ -140,7 +153,7 @@
                                                  style="object-fit: cover;"
                                                  alt="Image de {{ annonce.make }} {{ annonce.model }}">
                                         </div>
-                                        <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100 text-truncate">
+                                        <div class="d-flex flex-column align-content-around bg-white py-2 px-2 w-100">
                                             <a class="list-annonce-title font-weight-medium"
                                                href="{{ path('annonce', {'slug': annonce.slug }) }}"
                                                title="Voir cette annonce : {{ annonce.make }} - {{ annonce.model }}">{{ annonce.title }}</a><span
